# atlan_assignment

./: Dockerfile  README.md  docker-compose-services.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/worker/: celery_app.py  celery_worker.py
kubernetes/: celery-flower-deployment.yaml  celery-flower-service.yaml  fastapi-deployment.yaml  fastapi-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-deployment.yaml  worker-deployment.yaml
