[tool.poetry]
name = "atlan_assignment"
version = "0.1.0"
description = "Task scheduling with pause/resume/terminate"
authors = ["Satyam Kumar <io.satyamtg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.3"
fastapi = "^0.60.1"
hypercorn = "^0.10.2"
celery = "^4.4.6"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
